--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_fields/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_fields/config.yaml
@@ -162,21 +162,20 @@
       type: json
       required: false
       default:
-        age: '24'
-        name: Joe
-        sex: m
+        key: "default value"
+        boolean: true
     - name: new_json
       type: json
       required: false
       default:
-        time: '12'
-        range: 'super long'
-
+        key: "value"
+        integer: 52
     - &secrettext
       name: secrettext
       type: secrettext
       required: false
       default: "sec\nret\ntext"
+
 - type: service
   name: test_service
   version: 1.6
@@ -321,15 +320,14 @@
       type: json
       required: false
       default:
-        age: '24'
-        name: Joe
-        sex: m
+        key: "default value"
+        boolean: true
     - name: new_json
       type: json
       required: false
       default:
-        time: '12'
-        range: 'super long'
+        key: "value"
+        integer: 52
     - *secrettext
 
   components:
@@ -475,13 +473,12 @@
           type: json
           required: false
           default:
-            age: '24'
-            name: Joe
-            sex: m
+            key: "default value"
+            boolean: true
         - name: new_json
           type: json
           required: false
           default:
-            time: '12'
-            range: 'super long'
+            key: "value"
+            integer: 52
         - *secrettext
