--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_group_configs_with_changed_group_customisation/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_group_configs_with_changed_group_customisation/config.yaml
@@ -107,9 +107,8 @@
       type: json
       required: false
       default:
-        age: '24'
-        name: Joe
-        sex: m
+        key: "default value"
+        boolean: true
     - &secrettext
       name: secrettext
       type: secrettext
@@ -206,9 +205,8 @@
       type: json
       required: false
       default:
-        age: '24'
-        name: Joe
-        sex: m
+        key: "default value"
+        boolean: true
     - *secrettext
 
   components:
@@ -299,7 +297,6 @@
           type: json
           required: false
           default:
-            age: '24'
-            name: Joe
-            sex: m
+            key: "default value"
+            boolean: true
         - *secrettext
