--- a/tests/functional/test_config_after_upgrade_data/cluster_with_configs/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_with_configs/config.yaml
@@ -93,9 +93,8 @@
       type: json
       required: false
       default:
-        age: '24'
-        name: Joe
-        sex: m
+        key: "default value"
+        boolean: true
     - &secrettext
       name: secrettext
       type: secrettext
@@ -185,9 +184,8 @@
       type: json
       required: false
       default:
-        age: '24'
-        name: Joe
-        sex: m
+        key: "default value"
+        boolean: true
     - *secrettext
 
   components:
@@ -272,7 +270,6 @@
           type: json
           required: false
           default:
-            age: '24'
-            name: Joe
-            sex: m
+            key: "default value"
+            boolean: true
         - *secrettext
