--- a/tests/functional/test_config_after_upgrade_data/cluster_with_group_configs/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_with_group_configs/config.yaml
@@ -94,9 +94,8 @@
       type: json
       required: false
       default:
-        age: '24'
-        name: Joe
-        sex: m
+        key: "default value"
+        boolean: true
     - &secrettext
       name: secrettext
       type: secrettext
@@ -187,9 +186,8 @@
       type: json
       required: false
       default:
-        age: '24'
-        name: Joe
-        sex: m
+        key: "default value"
+        boolean: true
     - *secrettext
 
   components:
@@ -275,7 +273,6 @@
           type: json
           required: false
           default:
-            age: '24'
-            name: Joe
-            sex: m
+            key: "default value"
+            boolean: true
         - *secrettext
