--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_new_default_value/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_new_default_value/config.yaml
@@ -100,9 +100,8 @@
       type: json
       required: false
       default:
-        age: '25'
-        name: Jane
-        sex: f
+        key: "initial value"
+        float: 3.25
     - name: secrettext
       type: secrettext
       required: false
