--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_new_fields/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_new_fields/config.yaml
@@ -163,15 +163,14 @@
       type: json
       required: false
       default:
-        age: '24'
-        name: Joe
-        sex: m
+        key: "default value"
+        boolean: true
     - name: new_json
       type: json
       required: false
       default:
-        time: '12'
-        range: 'super long'
+        key: "value"
+        integer: 52
     - name: secrettext
       type: secrettext
       required: false
