ADCM-1586 Test on `secrettext` config field type (#1199)
* ADCM-1586 Test secrettext config field type

* ADCM-1586 Config field type `secrettext` added to previously created tests

* ADCM-1586 Add secrettext checks to action files in config group tests and missed group_customization flag fix

* ADCM-1586 Move secrettext checks closer to password

* ADCM-1586 Separate service and component assignment in `test_secret_text_field` test and whitespace added

Co-authored-by: Sergey Khomutinin <31664571+skhomuti@users.noreply.github.com>

--- a/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/config.yaml
@@ -124,6 +124,11 @@
         age: '24'
         name: Joe
         sex: m
+    - &secrettext
+      name: secrettext
+      type: secrettext
+      required: false
+      default: "secret\npass\nword"
     - name: json
       type: json
       required: false
@@ -251,6 +256,8 @@
         age: '24'
         name: Joe
         sex: m
+    - *secrettext
+
   components:
     first:
       constraint: [1,+]
@@ -371,6 +378,8 @@
             age: '24'
             name: Joe
             sex: m
+        - *secrettext
+
     second:
       constraint: [1,+]
 
