--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -35,7 +35,7 @@ roles:
                 - view
                 - add
 
-    - name: create CLuster
+    - name: create Cluster
       description: The ability to add new cluster
       apps:
         - label: cm
