--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_default_value/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_default_value/config.yaml
@@ -95,6 +95,12 @@
         age: '25'
         name: Jane
         sex: f
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "initial value"
+        float: 3.25
     - &secrettext
       name: secrettext
       type: secrettext
@@ -178,6 +184,12 @@
         age: '25'
         name: Jane
         sex: f
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "initial value"
+        float: 3.25
     - *secrettext
 
   components:
@@ -256,4 +268,10 @@
             age: '25'
             name: Jane
             sex: f
+        - name: json
+          type: json
+          required: false
+          default:
+            key: "initial value"
+            float: 3.25
         - *secrettext
