--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_group_configs_with_new_fields/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_group_configs_with_new_fields/config.yaml
@@ -159,6 +159,18 @@
       default:
         time: '12'
         range: 'super long'
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "default value"
+        boolean: true
+    - name: new_json
+      type: json
+      required: false
+      default:
+        key: "value"
+        integer: 52
     - &secrettext
       name: secrettext
       type: secrettext
@@ -307,6 +319,18 @@
       default:
         time: '12'
         range: 'super long'
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "default value"
+        boolean: true
+    - name: new_json
+      type: json
+      required: false
+      default:
+        key: "value"
+        integer: 52
     - *secrettext
 
   components:
@@ -449,4 +473,16 @@
           default:
             time: '12'
             range: 'super long'
+        - name: json
+          type: json
+          required: false
+          default:
+            key: "default value"
+            boolean: true
+        - name: new_json
+          type: json
+          required: false
+          default:
+            key: "value"
+            integer: 52
         - *secrettext
