--- a/tests/functional/test_config_after_upgrade_data/cluster_with_group_configs/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_with_group_configs/config.yaml
@@ -90,6 +90,12 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "default value"
+        boolean: true
     - &secrettext
       name: secrettext
       type: secrettext
@@ -176,6 +182,12 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "default value"
+        boolean: true
     - *secrettext
 
   components:
@@ -257,4 +269,10 @@
             age: '24'
             name: Joe
             sex: m
+        - name: json
+          type: json
+          required: false
+          default:
+            key: "default value"
+            boolean: true
         - *secrettext
