--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_configs_with_changed_types/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_configs_with_changed_types/config.yaml
@@ -97,6 +97,12 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "default value"
+        boolean: true
     - name: secrettext
       type: text
       required: false
