--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_new_fields/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_new_fields/config.yaml
@@ -159,6 +159,18 @@
       default:
         time: '12'
         range: 'super long'
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "default value"
+        boolean: true
+    - name: new_json
+      type: json
+      required: false
+      default:
+        key: "value"
+        integer: 52
     - name: secrettext
       type: secrettext
       required: false
