--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_changed_group_customisation/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_changed_group_customisation/config.yaml
@@ -103,6 +103,12 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "default value"
+        boolean: true
     - name: secrettext
       type: secrettext
       required: false
