--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_new_default_value/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_new_default_value/config.yaml
@@ -96,6 +96,12 @@
         age: '25'
         name: Jane
         sex: f
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "initial value"
+        float: 3.25
     - name: secrettext
       type: secrettext
       required: false
