--- a/tests/functional/test_config_after_upgrade_data/provider_with_configs/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_with_configs/config.yaml
@@ -89,6 +89,12 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        key: "default value"
+        boolean: true
     - name: secrettext
       type: secrettext
       required: false
