ADCM-2233 fix multi state bundles

--- a/tests/functional/test_actions_data/cluster/state_and_multi_state/config.yaml
+++ b/tests/functional/test_actions_data/cluster/state_and_multi_state/config.yaml
@@ -31,7 +31,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
@@ -67,7 +67,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
