--- a/tests/functional/test_actions_data/cluster_with_components/state_and_multi_state/config.yaml
+++ b/tests/functional/test_actions_data/cluster_with_components/state_and_multi_state/config.yaml
@@ -21,7 +21,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
@@ -44,7 +44,7 @@
           masking:
             state:
               available:
-                - installed
+                - created
             multi_state:
               unavailable:
                 - installed
@@ -71,7 +71,7 @@
           masking:
             state:
               available:
-                - installed
+                - created
             multi_state:
               unavailable:
                 - installed
@@ -111,7 +111,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
