--- a/tests/functional/test_actions_data/cluster_with_service/state_and_multi_state/config.yaml
+++ b/tests/functional/test_actions_data/cluster_with_service/state_and_multi_state/config.yaml
@@ -21,7 +21,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
@@ -55,7 +55,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
@@ -91,7 +91,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
