--- a/tests/functional/test_actions_data/provider/state_and_multi_state/config.yaml
+++ b/tests/functional/test_actions_data/provider/state_and_multi_state/config.yaml
@@ -23,7 +23,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
@@ -50,7 +50,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
@@ -91,7 +91,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
@@ -118,7 +118,7 @@
       masking:
         state:
           available:
-            - installed
+            - created
         multi_state:
           unavailable:
             - installed
