ADCM-2240 add jsonschema to depenedies

--- a/assemble/base/requirements-base.txt
+++ b/assemble/base/requirements-base.txt
@@ -26,6 +26,7 @@ yspec
 # Custom bundle libs
 apache-libcloud
 jmespath
+jsonschema
 lxml
 pycrypto
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
