--- a/web/package.json
+++ b/web/package.json
@@ -35,6 +35,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "deepmerge": "^4.2.2",
+    "immutable": "^4.0.0",
     "luxon": "^1.25.0",
     "rxjs": "^6.5.5",
     "sass": "^1.32.8",
