ADCM-2227 fix role upgrade

--- a/python/rbac/upgrade/role_spec.yaml
+++ b/python/rbac/upgrade/role_spec.yaml
@@ -5,6 +5,8 @@ version: 1
 roles:
     - name: base
       description: Base user role
+      module_name: rbac.roles
+      class_name: ModelRole
       apps:
         - label: auth
           models:
