--- a/tests/functional/test_inventories_data/cluster_inventory_tests/config.yaml
+++ b/tests/functional/test_inventories_data/cluster_inventory_tests/config.yaml
@@ -131,6 +131,25 @@
           type: file
           required: false
 
+    GROUP_BUDDY:
+      config_group_customization: true
+      config:
+        - name: __main_info
+          type: string
+          default: "I'm a very important string, don't touch me"
+          group_customization: false
+        - name: simple_field
+          type: integer
+          default: 1
+        - name: json_field
+          type: json
+          default:
+            long_time: "ago"
+        - name: map_field
+          type: map
+          default:
+            long_time: "ago"
+
   actions:
     install:
       type: job
