--- a/tests/functional/test_inventories_data/cluster_inventory_tests/config.yaml
+++ b/tests/functional/test_inventories_data/cluster_inventory_tests/config.yaml
@@ -234,6 +234,13 @@
                 on_success: deleted
                 on_fail: created
 
+        check:
+          type: job
+          script: ansible/check_attributes.yaml
+          script_type: ansible
+          states:
+            available: any
+
     config:
         required:
             type: integer
