--- a/tests/ui_tests/test_host_page_data/provider_config/config.yaml
+++ b/tests/ui_tests/test_host_page_data/provider_config/config.yaml
@@ -34,6 +34,9 @@
     - name: important_password
       display_name: "Important password"
       type: password
+    - name: secrettext
+      type: secrettext
+      default: "sec\nret\ntext"
     - name: advanced_one
       display_name: "Advanced option"
       type: string
