ADCM-2247 Updated test on inventories to catch config group merge problems (#1236)
* ADCM-2247 Updated test on inventories to catch config group merge problems and __main_info vanishing problem

* ADCM-2247 Expected inventory changed according to bugfix implementation and redundant "else" removed

* ADCM-2247 Check from playbook that attributes are in place

--- a/tests/functional/test_inventories_data/cluster_inventory_tests/config.yaml
+++ b/tests/functional/test_inventories_data/cluster_inventory_tests/config.yaml
@@ -131,6 +131,25 @@
           type: file
           required: false
 
+    GROUP_BUDDY:
+      config_group_customization: true
+      config:
+        - name: __main_info
+          type: string
+          default: "I'm a very important string, don't touch me"
+          group_customization: false
+        - name: simple_field
+          type: integer
+          default: 1
+        - name: json_field
+          type: json
+          default:
+            long_time: "ago"
+        - name: map_field
+          type: map
+          default:
+            long_time: "ago"
+
   actions:
     install:
       type: job
@@ -214,6 +233,13 @@
                     - installed
                 on_success: deleted
                 on_fail: created
+
+        check:
+          type: job
+          script: ansible/check_attributes.yaml
+          script_type: ansible
+          states:
+            available: any
 
     config:
         required:
