rm ansible_host=null

--- a/tests/functional/test_ansible_bugs_data/cluster_adcm_683/delegate.yaml
+++ b/tests/functional/test_ansible_bugs_data/cluster_adcm_683/delegate.yaml
@@ -45,7 +45,7 @@
       register: result
     - debug:
         msg: "{{ job.config.bad_fqdn }}-hostname: {{ result.stdout }}"
-    - command: hostname
+    - command: hostname -i
       delegate_to: "{{ job.config.bad_fqdn }}"
       register: result_ip
     - debug:
