ADCM-2289 Add HC map remap check after adcm_delete_service call

--- a/tests/functional/test_delete_service_plugin_data/cluster_service_hostcomponent/cluster/config.yaml
+++ b/tests/functional/test_delete_service_plugin_data/cluster_service_hostcomponent/cluster/config.yaml
@@ -28,4 +28,11 @@
         available: any
   components:
     ZOOKEEPER_SERVER:
+      constraint: [1,+]
     ZOOKEEPER_CLIENT:
+
+- type: service
+  name: second_service
+  version: 1
+  components:
+    some_component:
