ADCM-2248 Typo fixed in config and long version changed to more adequate check

--- a/tests/functional/test_import_data/service_import/exactly_one_version/import/config.yaml
+++ b/tests/functional/test_import_data/service_import/exactly_one_version/import/config.yaml
@@ -17,8 +17,8 @@
     import:
        hadoop:
           versions:
-             min_strict: 1.2
-             max_strict: 1.2
+             min: 1.2
+             max: 1.2
        ADH:
           versions:
              max: 1.2
